--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,12 +3,11 @@ spring:
       url: jdbc:mysql://localhost:3306/j2ee_project?useSSL=false
       username : root
 
-
 jpa:
    properties:
       hibernate:
          dialect : org.hibernate.dialect.MySQL5InnoDBDialect
 
-jpa.hibernate.ddl_auto : create
-      
-      
+springdoc:
+   api-docs:
+      enabled: on
